--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,22 @@
     font-weight: 700;
     border: none;
 }
+
+.btn2 {
+    width: 8em;
+    height: 3em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(1, 94, 1);
+    color: white;
+    border-radius: 8px;
+    font-size: 18px;
+    font-weight: 700;
+    border: none;
+}
+
+
 .btn:hover{
     background-color:#f96060 ;
 }
