--- a/src/App.css
+++ b/src/App.css
@@ -11,16 +11,20 @@
 
 .textarea {
     margin-top: 1.2em;
-    width: 35em;
-    height: 20rem;
-    padding: .8em;
+    width: 90rem;
+    height: 30rem;
+    padding: 10px;
     size: 6px;
     font-size: 30px;
     border-radius: 5px;
-    border: 3px solid #f19696;
+    border: 3px solid rgb(4, 136, 4);
     font-family: 'Times New Roman', Times, serif;
 }
 
+.sameline{
+    display: flex;
+    gap: 3rem;
+}
 .btn {
     width: 8em;
     height: 3em;
@@ -41,7 +45,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(1, 94, 1);
+    background-color: green;
     color: white;
     border-radius: 8px;
     font-size: 18px;
@@ -55,4 +59,10 @@
 }
 .btn:active{
     background-color:#f83d3d ;
+}
+.btn2:hover{
+    background-color:rgb(50, 109, 50) ;
+}
+.btn2:active{
+    background-color:#537D5D ;
 }
